fix: aria label and contrast

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,7 +19,8 @@
     --secondary-foreground: #0f172a;
     --muted: #f1f5f9;
     --muted-foreground: #64748b;
-    --accent: #ff6d01;
+    --accent: #e76400;
+    /* --accent: #ff6d01; */
     --accent-foreground: #ffffff;
     --destructive: #ef4444;
     --destructive-foreground: #f8fafc;
